--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /*Reset CSS simples*/
-@import url('https://fonts.googleapis.com/css2?family=Krona+One&family=Montserrat&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Krona+One&family=Montserrat:wght@400;600&display=swap');
 
 * {
     margin: 0;
@@ -11,10 +11,10 @@ body{
     height: 100vh;
     box-sizing: border-box;
     background-color: #000000;
-    color: beige;
+    color: #f6f6f6;
 }
 .apresentacao{
-    margin: 10%;
+    margin: 7% 15%;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -22,17 +22,36 @@ body{
 
 .apresentacao__conteudo{
     width: 615px;
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
 }
 .apresentacao__conteudo__titulo{
     font-family: 'Krona One', sans-serif;
     font-size: 36px;
 }
-.apresentacao__conteudo_texto{
+.apresentacao__conteudo__texto{
     font-size: 24px;
     font-family: 'Montserrat', sans-serif;
 }
 .tituloDestaque{
     color: #22d4fd;
+}
+.apresentacao__links{
+    display: flex;
+    justify-content: space-between;
+}
+.apresentacao__links__link{
+    background-color: #22D4FD;
+    width: 280px;
+    text-align: center;
+    border-radius: 16px;
+    font-size: 24px;
+    font-weight: 600;
+    padding: 21.5px 0;
+    text-decoration: none;
+    color: #000000;
+    font-family: 'Montserrat', sans-serif;
 }
 img{
     width: 500px;
