Adicionando Header e footer

--- a/style.css
+++ b/style.css
@@ -8,13 +8,13 @@
 
 
 body{
-    height: 100vh;
+    /* height: 100vh; */
     box-sizing: border-box;
     background-color: #000000;
     color: #f6f6f6;
 }
 .apresentacao{
-    margin: 7% 15%;
+    margin: 8% 15%;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -53,6 +53,7 @@ body{
     /* background-color: #22D4FD; */
     display: flex;
     justify-content: center;
+    gap: 16px;
     border: 2px solid #22D4FD;
     width: 378px;
     text-align: center;
@@ -64,6 +65,15 @@ body{
     color: #F6F6F6;
     font-family: 'Montserrat', sans-serif;
 }
-img{
-    width: 500px;
+.apresentacao__links__link:hover{
+    background-color: #272727;
+}
+.rodape{
+    background-color: #22D4FD;
+    color: #000000;
+    padding: 24px;
+    text-align: center;
+    font-family: 'Montserrat',sans-serif;
+    font-weight: 400;
+    font-size: 24px;
 }
