--- a/style.css
+++ b/style.css
@@ -1,6 +1,16 @@
 /*Reset CSS simples*/
 @import url('https://fonts.googleapis.com/css2?family=Krona+One&family=Montserrat:wght@400;600&display=swap');
 
+:root{
+    --cor-primaria: #000000;
+    --cor-secundaria: #f6f6f6;
+    --cor-terciaria: #22D4FD;
+    --cor-quartenaria: #272727;
+
+    --fonte-primaria: 'Krona One', sans-serif;
+    --fonte-secundaria: 'Montserrat', sans-serif;
+}
+
 * {
     margin: 0;
     padding: 0;
@@ -13,8 +23,8 @@
     gap: 80px;
 }
 .cabecalho__menu__link{
-    color: #22D4FD;
-    font-family: 'Montserrat',sans-serif;
+    color: var(--cor-terciaria);
+    font-family: var(--fonte-secundaria);
     font-weight: 600;
     font-size: 24px;
     text-decoration: none;
@@ -23,8 +33,8 @@
 body{
     /* height: 100vh; */
     box-sizing: border-box;
-    background-color: #000000;
-    color: #f6f6f6;
+    background-color: var(--cor-primaria);
+    color: var(--cor-secundaria);
 }
 .apresentacao{
     margin: 5% 15%;
@@ -40,15 +50,15 @@ body{
     gap: 40px;
 }
 .apresentacao__conteudo__titulo{
-    font-family: 'Krona One', sans-serif;
+    font-family: var(--fonte-primaria);
     font-size: 36px;
 }
 .apresentacao__conteudo__texto{
     font-size: 24px;
-    font-family: 'Montserrat', sans-serif;
+    font-family: var(--fonte-secundaria);
 }
 .tituloDestaque{
-    color: #22d4fd;
+    color: var(--cor-terciaria);
 }
 .apresentacao__links{
     display: flex;
@@ -58,7 +68,7 @@ body{
     gap: 32px;
 }
 .apresentacao__links__subtitulo{
-    font-family: 'Krona One',sans-serif;
+    font-family: var(--fonte-primaria);
     font-size: 24px;
     font-weight: 400;
 }
@@ -67,7 +77,7 @@ body{
     display: flex;
     justify-content: center;
     gap: 16px;
-    border: 2px solid #22D4FD;
+    border: 2px solid var(--cor-terciaria);
     width: 378px;
     text-align: center;
     border-radius: 8px;
@@ -75,18 +85,18 @@ body{
     font-weight: 600;
     padding: 21.5px 0;
     text-decoration: none;
-    color: #F6F6F6;
-    font-family: 'Montserrat', sans-serif;
+    color: var(--cor-secundaria);
+    font-family: var(--fonte-secundaria);
 }
 .apresentacao__links__link:hover{
-    background-color: #272727;
+    background-color: var(--cor-quartenaria);
 }
 .rodape{
-    background-color: #22D4FD;
-    color: #000000;
+    background-color: var(--cor-terciaria);
+    color: var(--cor-primaria);
     padding: 24px;
     text-align: center;
-    font-family: 'Montserrat',sans-serif;
+    font-family: var(--fonte-secundaria);
     font-weight: 400;
     font-size: 24px;
 }
