--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@
     color: var(--cor-terciaria);
     font-family: var(--fonte-secundaria);
     font-weight: 600;
-    font-size: 24px;
+    font-size: 1.5rem;
     text-decoration: none;
 }
 
@@ -51,10 +51,10 @@ body{
 }
 .apresentacao__conteudo__titulo{
     font-family: var(--fonte-primaria);
-    font-size: 36px;
+    font-size: 2.25rem;
 }
 .apresentacao__conteudo__texto{
-    font-size: 24px;
+    font-size: 1.5rem;
     font-family: var(--fonte-secundaria);
 }
 .tituloDestaque{
@@ -69,7 +69,7 @@ body{
 }
 .apresentacao__links__subtitulo{
     font-family: var(--fonte-primaria);
-    font-size: 24px;
+    font-size: 1.5rem;
     font-weight: 400;
 }
 .apresentacao__links__link{
@@ -81,7 +81,7 @@ body{
     width: 378px;
     text-align: center;
     border-radius: 8px;
-    font-size: 24px;
+    font-size: 1.5rem;
     font-weight: 600;
     padding: 21.5px 0;
     text-decoration: none;
@@ -98,5 +98,5 @@ body{
     text-align: center;
     font-family: var(--fonte-secundaria);
     font-weight: 400;
-    font-size: 24px;
+    font-size: 1.5rem;
 }
