--- a/style.css
+++ b/style.css
@@ -41,10 +41,11 @@ body{
     display: flex;
     align-items: center;
     justify-content: space-between;
+    gap: 82px;
 }
 
 .apresentacao__conteudo{
-    width: 615px;
+    width: 50%;
     display: flex;
     flex-direction: column;
     gap: 40px;
@@ -56,6 +57,9 @@ body{
 .apresentacao__conteudo__texto{
     font-size: 1.5rem;
     font-family: var(--fonte-secundaria);
+}
+.apresentacao__imagem{
+    width: 50%;
 }
 .tituloDestaque{
     color: var(--cor-terciaria);
@@ -78,7 +82,7 @@ body{
     justify-content: center;
     gap: 16px;
     border: 2px solid var(--cor-terciaria);
-    width: 378px;
+    width: 50%;
     text-align: center;
     border-radius: 8px;
     font-size: 1.5rem;
@@ -99,4 +103,22 @@ body{
     font-family: var(--fonte-secundaria);
     font-weight: 400;
     font-size: 1.5rem;
+}
+@media (max-width: 1200px){
+    .cabecalho{
+        padding: 10%;
+    }
+
+    .cabecalho__menu{
+        justify-content: center;
+    }
+
+    .apresentacao{
+        display: flex;
+        flex-direction: column-reverse;
+
+    }
+    .apresentacao__conteudo{
+        width: auto;
+    }
 }
